Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/6563143/InvalidAnonymous.out
InvalidAnonymous.java:10:13: compiler.err.cant.resolve.location: kindname.class, Undefined, , , (compiler.misc.location: kindname.class, InvalidAnonymous, null)
1 error
