Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/6563143/InvalidAnonymous.java
/*
 * @test /nodynamiccopyright/
 * @bug 8242802
 * @summary Verify javac does not crash while checking for equals/hashCode overrides
 * @compile/fail/ref=InvalidAnonymous.out -XDrawDiagnostics InvalidAnonymous.java
 * @compile/fail/ref=InvalidAnonymous.out -XDrawDiagnostics -Xlint:overrides InvalidAnonymous.java
 */
public class InvalidAnonymous {
    private void t() {
        new Undefined() {};
    }
}
